<resources>
    <string name="app_name">MuziMusic</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chart">Chart</string>
    <string name="library">Library</string>
    <string name="recently_played">Recently played</string>
    <string name="spotifywrapped">#SPOTIFYWRAPPED</string>
    <string name="your_2024_in_review">Your 2024 in review</string>
    <string name="your_albums">Your Albums</string>
    <string name="your_songs">Your Songs</string>
    <string name="your_artists">Your artists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recents">Recents</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="album_art_dir">content://media/external/audio/albumart</string>
    <string name="your_library">Your Library</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="album_art_path">content://media/external/audio/albumart</string>
    <string name="lyrics">Lyrics</string>
    <string name="notifications">Music</string>
    <string name="descriptionText">For music notification and music controller</string>
    <string name="group_name">Notification</string>
    <string name="a_z">A - Z</string>
    <string name="playlist">Playlist</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="no_songs">No Songs</string>
    <string name="add_new">Add New</string>
    <string name="add_to_this_playlist">Add to this playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="cancle">CANCLE</string>
    <string name="delete">DELETE</string>
    <string name="edit">Edit</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="min">1 min</string>
    <string name="start">START</string>
    <string name="all_songs">All Songs</string>
    <string name="setting">Setting</string>
    <string name="type_the_name_song">Type The Name Song</string>
    <string name="no_internet">No Internet Connection</string>
</resources>